--- a/Módulo 1 - Primeros pasos/Modulo1 - Primeros pasos.ipynb
+++ b/Módulo 1 - Primeros pasos/Modulo1 - Primeros pasos.ipynb
@@ -69,11 +69,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hola desde la consola\n"
+     ]
+    }
+   ],
    "source": [
-    "# Impresión en pantalla print('Hola desde la consola')\n"
+    "# Impresión en pantalla print('Hola desde la consola')\n",
+    "print('hola desde la consola')"
    ]
   },
   {
@@ -98,11 +107,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
-    "# Tu turno, prueba el fragmento de código anterior\n"
+    "# Tu turno, prueba el fragmento de código anterior\n",
+    "sum = 1 + 2 \n",
+    "mult = sum * 2\n",
+    "print(mult)"
    ]
   },
   {
